--- a/HospitalPL/HospitalPL.csproj
+++ b/HospitalPL/HospitalPL.csproj
@@ -6,4 +6,8 @@
     <ImplicitUsings>enable</ImplicitUsings>
   </PropertyGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\HospitalBLL\HospitalBLL.csproj" />
+  </ItemGroup>
+
 </Project>
