--- a/HospitalPL/appsettings.json
+++ b/HospitalPL/appsettings.json
@@ -5,5 +5,6 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
+  "ConnectionStrings": { "DefaultConnection": "Server=.;Database=HospitalSystemManagenet;Trusted_Connection=True;TrustServerCertificate=True;" },
   "AllowedHosts": "*"
 }
