for department and doctor(DTOS-Repos-service)

--- a/HospitalBLL/HospitalBLL.csproj
+++ b/HospitalBLL/HospitalBLL.csproj
@@ -15,10 +15,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <Folder Include="DTOs\" />
-    <Folder Include="Helpers\" />
-    <Folder Include="Services\Classes\" />
-    <Folder Include="Services\Interfaces\" />
+    <Folder Include="Services\NewFolder\" />
   </ItemGroup>
 
 </Project>
